# isitdry

./: Dockerfile  Makefile  README.md  docker-compose.yaml  fly.toml  pyproject.toml
.github/workflows/: main.yaml
docs/: CNAME
static/: index.html
tests/: test_isitdry.py
