[tool.poetry]
name = "isitdry"
version = "0.1.0"
description = "Crowd-sourced API to determine if it's dry enough to climb."
authors = ["Justin Lam <justinmklam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
known_first_party = "isitdry"
profile = "black"
line_length = 88

[[tool.mypy.overrides]]
module = ["isitdry"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
